fixing How it works list bullet on fireFox:

--- a/bot/public/styles/site.styl
+++ b/bot/public/styles/site.styl
@@ -1,7 +1,32 @@
 @import "navbar"
 @import "footer"
 body, h1, h2
-  font-family: proxima-n-w01-reg,sans-serif;
+  font-family: proxima-n-w01-reg, sans-serif;
+
+.select-style
+  border: 1px solid #ccc;
+  width: 120px;
+  border-radius: 3px;
+  overflow: hidden;
+  background: #fafafa url("img/icon-select.png") no-repeat 90% 50%;
+
+  select
+    padding: 5px 8px;
+    width: 130%;
+    border: none;
+    box-shadow: none;
+    background: transparent;
+    background-image: none;
+    -webkit-appearance: none;
+
+  select:focus
+    outline none
+
+.mdl-textfield.mdl-js-textfield.mdl-select
+  label
+    position relative
+    top 0
+
 
 .container-map
   width 100%
@@ -128,7 +153,7 @@ section.section-main
         padding-left: 105px;
         line-height: 1.3;
         vertical-align baseline
-        font-family wfont_e4cc5f_73453c3e584b413c990f7fea4ea52c59,wf_73453c3e584b413c990f7fea4,orig_proximanovalight
+        font-family wfont_e4cc5f_73453c3e584b413c990f7fea4ea52c59, wf_73453c3e584b413c990f7fea4, orig_proximanovalight
     li:before
       margin-right: 10px;
       content: counter(item);
@@ -153,6 +178,9 @@ section.section-main
     button
       margin-top 20px
 
-
+.collapse-content
+  ul
+    li
+      list-style-type none
 
 
